Fixed: fix contrast

--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -184,7 +184,7 @@
 
 .product-card__name .small{
   font-weight: 500;
-  color: #acacac;
+  color: #525252;
   margin-top: 3px;
   text-transform: capitalize;
 }
