--- a/src/components/ProductOverview.css
+++ b/src/components/ProductOverview.css
@@ -27,5 +27,5 @@
 }
 
 .product-overview__type{
-  color: #acacac;
+  color: #525252;
 }
